2019-06-30  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-input-url): Interpret bookmark titles as urls (ala
	awesome-bar).
	(w3m--get-url-from-bookmark-title): New function to enable the feature.
	(w3m-arrived-setup): Add bookmark urls and title strings to
	variable w3m-input-url-history.

2019-06-30  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-hist.el (w3m-history-scrub): Delete bookmark edit histories and
	url input history. Delete download queues and their save-file. bugfix:
	properly initialize history for each buffer.

2019-06-30  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-download.el (w3m-download-using-wget): When the url for an image
	is not an image filename, but one exists in the w3m-image-alt field,
	use it instead.

2019-06-27  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-create-page): Bugfixes: Properly construct collection for
	completing-read, return to original buffer when performing an external
	view or a download. Spin off two parts into separate functions:
	(w3m--unsupported-display, w3m--prompt-for-unknown-content-type)
	(w3m-external-view): Bugfix: was not respecting user's request to download.
	(w3m-external-view-file): Bugfixes: account for file arg being nil, .
	Regex for suffix was failing for foo.bar.abc. Wasn't parsing external
	format for content types based upon substituting '%s' for filename.

2019-06-27  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m--retrieve-1--handler-function): Bugfix:  header
	info doesn't exist for failed GET requests.

2019-06-26  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-download.el (w3m-download-video, w3m--download-update-progress)
	(w3m--download-sentinel, w3m--download-from-queue): ): Integrate
	youtube-dl usage with download queue, support rate-limiting.
	(w3m--download-progress-regex) Deleted. Replaced by
	(w3m--download-progress-regex-wget)
	(w3m--download-progress-regex-youtube-dl): New regex contants.
	(w3m--download-cmd): New buffer local variable, to distinguish between