@@ -1,3 +1,8 @@
+2019-07-01  Boruch Baum  <boruch_baum@gmx.com>
+
+	* w3m-util.el (w3m--remove-face-property): Clone of buggy function
+	w3m-remove-face-property.
+
 2019-06-30  Boruch Baum  <boruch_baum@gmx.com>
 
 	* w3m.el (w3m-input-url): Interpret bookmark titles as urls (ala
